--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="Kwitter.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <script src="kwitter.js"></script>
 </head>
 <body>
@@ -26,7 +26,7 @@
 		  <label >User Name:</label>
 		  <input id="user_name" class="form-control" placeholder="User Name">
 		</div>
-		<button id="login_button" class="btn btn-primary" onclick="addUser()">Log in</button>
+		<button id="login_button" class="btn btn-success" onclick="addUser()">Log in</button>
 		<br><br>
 	</div>
 </center>
